[package]
name = "numbering-engine"
version = "0.1.0"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"

[dependencies]
actix-web = "3.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
mimalloc = { version = "0.1.22", default-features = false }
redis = { version = "0.17.0", features = ["cluster"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
uuid = { version = "0.8.1", features = ["v4", "serde"] }

[dev-dependencies]
diesel_migrations = { version = "1.4.0", features = ["postgres"] }
